# hmer-img2latex

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  index.html  pyproject.toml  test_dataloader.py
.github/workflows/: deploy.yml
docs/: IMPLEMENTATION.md  README_METRICS.md  brief.md  new_report.md  project_report.md
img2latex/: __init__.py  __main__.py  cli.py  img2latex.md
img2latex/analysis/: __init__.py  curves.py  errors.py  images.py  metrics.py  plot_report_figures.py  preprocess.py  project.py  tokens.py  utils.py  visualize_predictions.py
img2latex/configs/: __init__.py  config.yaml  resnet_lstm.yaml
img2latex/data/: __init__.py  dataset.py  tokenizer.py  transforms.py  utils.py
img2latex/model/: __init__.py  decoder.py  encoder.py  seq2seq.py
img2latex/training/: __init__.py  enhanced_metrics.py  metrics.py  predictor.py  trainer.py
img2latex/utils/: __init__.py  analysis_utils.py  logging.py  mps_utils.py  path_utils.py  registry.py  visualization.py  visualize_metrics.py
outputs/analysis/: image_stats.json
outputs/formula_analysis/: extreme_formulas.txt
outputs/registry/: experiment_registry.json
outputs/v2_optimized_v1/: config.yaml
scripts/: analysis.py  analyze_images.py  analyze_project.py  analyze_token_distribution.py  error_analysis.py  plot_learning_curves.py  utils.py  visualize_preprocessing.py
tests/: test_dataloader.py  test_encoder.py
